// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog 1`] = `
<div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered oxd-overlay--hide">
  <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
  <div class="oxd-dialog-container-default">
    <div class="oxd-dialog-container-default--inner">
      <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
    </div>
  </div>
</div>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog dialogContainer-div 1`] = `
<div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
  <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
  <div>
    <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
  </div>
</div>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog no shadow 1`] = `
<div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
  <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
  <div class="oxd-dialog-container-default">
    <div class="oxd-dialog-container-default--inner">
      <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
    </div>
  </div>
</div>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog persistent 1`] = `
<div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
  <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
  <div class="oxd-dialog-container-default">
    <div class="oxd-dialog-container-default--inner">
      <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
    </div>
  </div>
</div>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog show 1`] = `
<div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
  <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
  <div class="oxd-dialog-container-default">
    <div class="oxd-dialog-container-default--inner">
      <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" role="document"><button class="oxd-dialog-close-button oxd-dialog-close-button-position">×</button></div>
    </div>
  </div>
</div>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog witout close 1`] = `
<div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
  <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
  <div class="oxd-dialog-container-default">
    <div class="oxd-dialog-container-default--inner">
      <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" role="document"></div>
    </div>
  </div>
</div>
`;
